[package]
name = "prot_translate"
version = "0.1.0"
authors = ["dweb0", "DorianCoding"]
documentation = "https://docs.rs/prot_translate/"
description = "Translate nucleotide sequence to protein."
homepage = "https://github.com/DorianCoding/prot_translate"
repository = "https://github.com/DorianCoding/prot_translate"
readme = "README.md"
keywords = ["bioinformatics", "translate", "dna", "rna", "protein"]
categories = ["algorithms", "science"]
license = "MIT/Apache-2.0"
edition = "2018"
exclude = ["/.travis.yml", "/benches/*", "/tests/*"]


[dependencies]

[dev-dependencies]
criterion = "0.2.11"
lazy_static = "1.3.0"
phf = { version = "0.7.24", features = ["macros"] }
csv = "1.1"
fnv = "1.0.3"

[[bench]]
name = "benches/bench.rs"
harness = false
